--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Textile Warehouse</title>
+    <title>AC Ioannou Trading LTD</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css" />
     <!-- Tailwind CSS (required) -->
@@ -21,14 +21,52 @@
 <body class="text-gray-800">
 
     <!-- Navbar -->
-    <nav class="bg-white shadow">
+    <nav class="bg-white border-gray-200 shadow-md">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <h1 class="text-xl font-bold">Textile Warehouse</h1>
-            <div class="space-x-6">
-                <a href="index.html" class="hover:text-blue-600 font-medium">Home</a>
-                <a href="about.html" class="hover:text-blue-600 font-medium">About Us</a>
-                <a href="products.html" class="hover:text-blue-600 font-medium">Products</a>
-                <a href="contact.html" class="hover:text-blue-600 font-medium">Contact Us</a>
+            <a href="index.html" class="flex items-center space-x-3">
+                <!-- Logo placeholder - replace with your actual logo -->
+                <div class="text-white p-1 rounded-md">
+                    <img class="max-h-10 w-16 object-contain" src="img/logo1.png">
+                </div>
+                <span class="self-center text-xl font-semibold whitespace-nowrap">AC Ioannou Trading LTD</span>
+            </a>
+
+            <!-- Mobile menu button -->
+            <button data-collapse-toggle="navbar-default" type="button"
+                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+                aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 1h15M1 7h15M1 13h15" />
+                </svg>
+            </button>
+
+            <!-- Nav Links -->
+            <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+                <ul
+                    class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
+                    <li>
+                        <a href="index.html"
+                            class="block py-2 pl-3 pr-4 text-white bg-blue-600 rounded md:bg-transparent md:text-blue-600 md:p-0 navbar-active"
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html"
+                            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0">About
+                            Us</a>
+                    </li>
+                    <li>
+                        <a href="products.html"
+                            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0">Products</a>
+                    </li>
+                    <li>
+                        <a href="contact.html"
+                            class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0">Contact
+                            Us</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -104,33 +142,46 @@
             <h2 class="sr-only">Products</h2>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a class="group">
-                    <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/category-page-04-image-card-01.jpg"
-                        alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+                    <img src="img/products/1.png"
                         class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
                     <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
                     <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
                     </p>
                 </a>
-                <a href="#" class="group">
-                    <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/category-page-04-image-card-02.jpg"
-                        alt="Olive drab green insulated bottle with flared screw lid and flat top."
+                <a class="group">
+                    <img src="img/products/4.jpg"
                         class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-                    <h3 class="mt-4 text-sm text-gray-700">Nomad Tumbler</h3>
-                    <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+                    <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
+                    <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
+                    </p>
                 </a>
-                <a href="#" class="group">
-                    <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/category-page-04-image-card-03.jpg"
-                        alt="Person using a pen to cross a task off a productivity paper card."
+                <a class="group">
+                    <img src="img/products/6.jpg"
                         class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-                    <h3 class="mt-4 text-sm text-gray-700">Focus Paper Refill</h3>
-                    <p class="mt-1 text-lg font-medium text-gray-900">$89</p>
+                    <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
+                    <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
+                    </p>
                 </a>
-                <a href="#" class="group">
-                    <img src="https://tailwindcss.com/plus-assets/img/ecommerce-images/category-page-04-image-card-04.jpg"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                <a class="group">
+                    <img src="img/products/10.jpg"
                         class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
-                    <h3 class="mt-4 text-sm text-gray-700">Machined Mechanical Pencil</h3>
-                    <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
+                    <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
+                    <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
+                    </p>
+                </a>
+                <a class="group">
+                    <img src="img/products/8.jpg"
+                        class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+                    <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
+                    <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
+                    </p>
+                </a>
+                <a class="group">
+                    <img src="img/products/9.jpg"
+                        class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8">
+                    <h3 class="mt-4 text-sm text-gray-700">Earthen Bottle</h3>
+                    <p class="mt-1 text-lg font-medium text-gray-900">Full Cotton Bed Sheet
+                    </p>
                 </a>
 
                 <!-- More products... -->
@@ -162,14 +213,11 @@
                 class="mx-auto mt-10 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5">
                 <img class="col-span-2 max-h-32  w-full object-contain lg:col-span-1" src="img/aps.jpg"
                     alt="Transistor">
-                <img class="col-span-2 max-h-32 w-32 object-contain lg:col-span-1" src="img/ath.png" alt="Reform"
-                    width="158" height="48">
-                <img class="col-span-2 max-h-32 w-32 object-contain lg:col-span-1" src="img/super.png" alt="Tuple"
-                    width="158" height="48">
-                <img class="col-span-2 max-h-32 w-32 object-contain sm:col-start-2 lg:col-span-1" src="img/mangas.png"
-                    alt="SavvyCal" width="158" height="48">
+                <img class="col-span-2 max-h-32 w-32 object-contain lg:col-span-1" src="img/ath.png">
+                <img class="col-span-2 max-h-32 w-32 object-contain lg:col-span-1" src="img/super.png">
+                <img class="col-span-2 max-h-32 w-32 object-contain sm:col-start-2 lg:col-span-1" src="img/mangas.png">
                 <img class="col-span-2 col-start-2 max-h-32 w-32 object-contain sm:col-start-auto lg:col-span-1"
-                    src="img/kleima.jpg" alt="Statamic" width="158" height="48">
+                    src="img/kleima.jpg">
             </div>
         </div>
     </div>
@@ -253,7 +301,7 @@
                         </div>
                         <div>
                             <p class="text-gray-600 dark:text-gray-300">Email</p>
-                            <p class="font-medium text-gray-800 dark:text-white">info@acitextiles.com</p>
+                            <p class="font-medium text-gray-800 dark:text-white">ioannou15@cytanet.com.cy</p>
                         </div>
                     </div>
                     <div class="flex items-start">
@@ -289,7 +337,7 @@
                 <div class="md:flex md:items-center md:justify-between">
                     <div class="mb-4 md:mb-0">
                         <p class="text-sm text-gray-500 dark:text-gray-400">
-                            © 2025 <span class="font-semibold">ACI Textiles</span>. All Rights Reserved.
+                            © 2025 <span class="font-semibold">AC Ioannou Trading LTD</span>. All Rights Reserved.
                         </p>
                         <p class="text-xs text-gray-400 dark:text-gray-500 mt-1">
                             Registered in Cyprus | VAT Number: CY10022367B
