--- a/about.html
+++ b/about.html
@@ -12,23 +12,59 @@
 <body class="text-gray-800">
 
   <!-- Navbar -->
-  <nav class="bg-white shadow">
+  <nav class="bg-white border-gray-200 shadow-md">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold">Textile Warehouse</h1>
-      <div class="space-x-6">
-        <a href="index.html">Home</a>
-        <a href="about.html" class="text-blue-600 font-medium">About Us</a>
-        <a href="products.html">Products</a>
-        <a href="contact.html">Contact Us</a>
+      <a href="index.html" class="flex items-center space-x-3">
+        <!-- Logo placeholder - replace with your actual logo -->
+        <div class="text-white p-1 rounded-md">
+          <img class="max-h-10 w-16 object-contain" src="img/logo1.png">
+        </div>
+        <span class="self-center text-xl font-semibold whitespace-nowrap">AC Ioannou Trading LTD</span>
+      </a>
+
+      <!-- Mobile menu button -->
+      <button data-collapse-toggle="navbar-default" type="button"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+        aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 1h15M1 7h15M1 13h15" />
+        </svg>
+      </button>
+
+      <!-- Nav Links -->
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
+          <li>
+            <a href="index.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0"
+              aria-current="page">Home</a>
+          </li>
+          <li>
+            <a href="about.html"
+              class="block py-2 pl-3 pr-4 text-white bg-blue-600 rounded md:bg-transparent md:text-blue-600 md:p-0 navbar-active">About
+              Us</a>
+          </li>
+          <li>
+            <a href="products.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0">Products</a>
+          </li>
+          <li>
+            <a href="contact.html"
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0">Contact
+              Us</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
 
-  <main class="container mx-auto px-4 py-10">
+
+  <main class="container mx-auto max-w-5xl px-4 py-10">
     <h2 class="text-3xl font-bold mb-4">About ACI</h2>
-    <p class="mb-4">ACI (Advanced Cotton Industries) has been at the forefront of textile import, storage, and
-      distribution since its founding. Our goal is to offer high-quality fabrics at competitive prices while maintaining
-      ethical sourcing and sustainable warehousing.</p>
+    <p class="mb-4">ACIoannou Textiles was founded in </p>
     <p class="mb-4">Based in Greece, ACI manages over 5,000 square meters of textile storage and partners with reliable
       international suppliers from Europe, Asia, and the Americas.</p>
     <p class="mb-8">We take pride in our experienced team and longstanding customer relationships that span decades.
@@ -37,43 +73,174 @@
     <h3 class="text-2xl font-semibold mb-4">Our Team</h3>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
       <div>
-        <img src="https://via.placeholder.com/150" class="rounded-full mx-auto mb-2" />
-        <p class="font-medium">Stelios Papadopoulos</p>
+        <p class="font-medium">Andreas Ioannou</p>
         <p class="text-sm text-gray-600">Founder & CEO</p>
       </div>
       <div>
-        <img src="https://via.placeholder.com/150" class="rounded-full mx-auto mb-2" />
-        <p class="font-medium">Maria Dimitriou</p>
-        <p class="text-sm text-gray-600">Head of Logistics</p>
+        <p class="font-medium">Persia Ioannou Taliadorou</p>
+        <p class="text-sm text-gray-600">Founder & CEO</p>
       </div>
       <div>
-        <img src="https://via.placeholder.com/150" class="rounded-full mx-auto mb-2" />
-        <p class="font-medium">Ahmed El-Sayed</p>
-        <p class="text-sm text-gray-600">Import Specialist</p>
+        <p class="font-medium">Stefanos Ioannou</p>
+        <p class="text-sm text-gray-600">Administration</p>
       </div>
       <div>
-        <img src="https://via.placeholder.com/150" class="rounded-full mx-auto mb-2" />
-        <p class="font-medium">Elena Vassilaki</p>
-        <p class="text-sm text-gray-600">Client Services</p>
+        <p class="font-medium">Christiana Ioannou</p>
+        <p class="text-sm text-gray-600">Administration</p>
       </div>
-    </div>
+      <div>
+        <p class="font-medium">Rafaella Charalambous</p>
+        <p class="text-sm text-gray-600">Administration</p>
+      </div>
+
+      <div>
+        <p class="font-medium">Parashos Parashou</p>
+        <p class="text-sm text-gray-600">Warehouse & Delivery</p>
+      </div>
+      <div>
+        <p class="font-medium">Petros Papalopoulos</p>
+        <p class="text-sm text-gray-600">Warehouse & Delivery</p>
+      </div>
+      <div>
+        <p class="font-medium">Vaggelis Papalopoulos</p>
+        <p class="text-sm text-gray-600">Warehouse</p>
+      </div>
+
   </main>
 
-  <footer class="bg-gray-800 text-white py-6 mt-10">
-    <div class="container mx-auto px-4 grid md:grid-cols-2 gap-6">
-      <div>
-        <h3 class="font-semibold">Contact</h3>
-        <p>📞 +30 210 1234567</p>
-        <p>📍 Athens, Greece</p>
+
+
+
+  <footer class="bg-gray-100 shadow-md mt-12 dark:bg-gray-800">
+    <div class="container mx-auto px-6 py-8">
+      <div class="grid md:grid-cols-3 gap-8">
+        <!-- Company Info -->
+        <div>
+          <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-4">ACI Textiles</h3>
+          <p class="text-gray-600 dark:text-gray-300 mb-2">Your trusted partner in premium textile sourcing
+            since 1995.</p>
+          <div class="flex items-center mt-4">
+            <a href="#" class="text-gray-500 hover:text-blue-600 dark:hover:text-blue-400 mr-4">
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-500 hover:text-blue-400 dark:hover:text-blue-300 mr-4">
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path
+                  d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84">
+                </path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-500 hover:text-pink-600 dark:hover:text-pink-400 mr-4">
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+            <a href="#" class="text-gray-500 hover:text-blue-700 dark:hover:text-blue-500">
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <path fill-rule="evenodd"
+                  d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <!-- Contact Info -->
+        <div>
+          <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-4">Contact Us</h3>
+          <div class="flex items-start mb-3">
+            <div class="flex-shrink-0 mr-3 text-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+              </svg>
+            </div>
+            <div>
+              <p class="text-gray-600 dark:text-gray-300">Phone</p>
+              <p class="font-medium text-gray-800 dark:text-white">+357 22 492033</p>
+            </div>
+          </div>
+          <div class="flex items-start mb-3">
+            <div class="flex-shrink-0 mr-3 text-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+              </svg>
+            </div>
+            <div>
+              <p class="text-gray-600 dark:text-gray-300">Email</p>
+              <p class="font-medium text-gray-800 dark:text-white">ioannou15@cytanet.com.cy</p>
+            </div>
+          </div>
+          <div class="flex items-start">
+            <div class="flex-shrink-0 mr-3 text-gray-500">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+              </svg>
+            </div>
+            <div>
+              <p class="text-gray-600 dark:text-gray-300">Address</p>
+              <p class="font-medium text-gray-800 dark:text-white">Pentageias 29, Dali 2571, Nicosia,
+                Cyprus</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Map -->
+        <div>
+          <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-4">Our Location</h3>
+          <div class="rounded-lg overflow-hidden shadow-md">
+            <iframe src="https://www.google.com/maps?q=Pentageias+29,+Dali+2571,+Cyprus/&output=embed"
+              class="w-full h-48 border-0" title="ACI Textiles Location Map" loading="lazy"></iframe>
+          </div>
+        </div>
       </div>
-      <div>
-        <h3 class="font-semibold mb-2">Our Location</h3>
-        <iframe src="https://www.google.com/maps?q=Athens,Greece&output=embed"
-          class="w-full h-40 rounded border-0"></iframe>
+
+      <!-- Bottom Section -->
+      <div class="border-t border-gray-200 dark:border-gray-700 mt-8 pt-6">
+        <div class="md:flex md:items-center md:justify-between">
+          <div class="mb-4 md:mb-0">
+            <p class="text-sm text-gray-500 dark:text-gray-400">
+              © 2025 <span class="font-semibold">AC Ioannou Trading LTD</span>. All Rights Reserved.
+            </p>
+            <p class="text-xs text-gray-400 dark:text-gray-500 mt-1">
+              Registered in Cyprus | VAT Number: CY10022367B
+            </p>
+          </div>
+          <div>
+            <ul class="flex flex-wrap items-center text-sm font-medium text-gray-500 dark:text-gray-400">
+              <li class="mr-6 mb-2 md:mb-0">
+                <a href="#" class="hover:text-blue-600 dark:hover:text-blue-400">About Us</a>
+              </li>
+              <li class="mr-6 mb-2 md:mb-0">
+                <a href="#" class="hover:text-blue-600 dark:hover:text-blue-400">Privacy Policy</a>
+              </li>
+              <li class="mr-6 mb-2 md:mb-0">
+                <a href="#" class="hover:text-blue-600 dark:hover:text-blue-400">Terms of Service</a>
+              </li>
+              <li class="mb-2 md:mb-0">
+                <a href="#" class="hover:text-blue-600 dark:hover:text-blue-400">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
-    <p class="text-center mt-4 text-gray-400">&copy; 2025 Textile Warehouse</p>
   </footer>
+
+
 </body>
 
 </html>
