--- a/about.html
+++ b/about.html
@@ -63,14 +63,26 @@
 
 
   <main class="container mx-auto max-w-5xl px-4 py-10">
-    <h2 class="text-3xl font-bold mb-4">About ACI</h2>
-    <p class="mb-4">ACIoannou Textiles was founded in </p>
-    <p class="mb-4">Based in Greece, ACI manages over 5,000 square meters of textile storage and partners with reliable
-      international suppliers from Europe, Asia, and the Americas.</p>
-    <p class="mb-8">We take pride in our experienced team and longstanding customer relationships that span decades.
-      Quality, consistency, and trust are our core values.</p>
-
-    <h3 class="text-2xl font-semibold mb-4">Our Team</h3>
+    <div class="flex flex-col md:flex-row items-start gap-8 mb-10">
+      <!-- Image on the left -->
+      <div class="w-full md:w-1/3">
+        <img src="img/ware1.png" alt="About ACI" class="rounded-lg w-full h-auto object-cover">
+      </div>
+  
+      <!-- Text on the right -->
+      <div class="w-full md:w-2/3">
+        <h2 class="text-3xl font-bold mb-4">About ACI</h2>
+        <p class="mb-4">AC Ioannou Trading LTD was founded in 1996 by Andreas Ioannou.</p>
+        <p class="mb-4">At ACI Textiles, we bring the finest in home comfort straight to your door. 
+          As a trusted importer and supplier of premium textile products, we specialize in offering a wide range of essentials, including face towels, bath towels, kitchen towels, bed quilts, pillows, bed sheets, bath mats, and cozy throws.    
+        </p>
+        <p class="mb-0">With a sharp eye for quality and a heart for comfort, ACI Textiles partners with leading manufacturers around the globe to deliver products that blend luxury, durability, and affordability. Whether you're refreshing your home, outfitting a hotel, or stocking your store, ACI is your go-to source for elegant, everyday essentials.
+          We're not just delivering textiles – we're bringing warmth, rest, and a touch of luxury to every room.
+        </p>
+      </div>
+    </div>
+  
+    <h3 class="text-3xl font-semibold mb-10">Our Team</h3>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
       <div>
         <p class="font-medium">Andreas Ioannou</p>
@@ -92,7 +104,6 @@
         <p class="font-medium">Rafaella Charalambous</p>
         <p class="text-sm text-gray-600">Administration</p>
       </div>
-
       <div>
         <p class="font-medium">Parashos Parashou</p>
         <p class="text-sm text-gray-600">Warehouse & Delivery</p>
@@ -105,9 +116,9 @@
         <p class="font-medium">Vaggelis Papalopoulos</p>
         <p class="text-sm text-gray-600">Warehouse</p>
       </div>
-
+    </div>
   </main>
-
+  
 
 
 
