--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CN02KN9M2K"></script>
+  <script src="script.js"></script>
 </head>
 
 <body class="text-gray-800">
