--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- Tailwind CSS (required) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CN02KN9M2K"></script>
+    <script src="script.js"></script>
     <!-- Flowbite CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
 
@@ -404,6 +405,7 @@
             </div>
         </div>
     </footer>
+
 
 
 </body>
